# pizza-engineering

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md
docs/analytics/: README.md
docs/pizza_police/: README.md
docs/raw/: README.md
docs/staging/: README.md
views/analytics/: kpis.sql  peak_hours.sql  sales_by_month.sql  top10_bestseller.sql
views/pizza_police/: orders.sql  pizze.sql
views/raw/: order_details.py  orders.py  pizza_types.py  pizzas.py  pizze.py
views/staging/: ingredients.sql  orders.sql  pizza_ingredients.sql  pizza_types.sql  pizzas.sql  pizze.sql
