[tool.poetry]
name = "lea-example"
version = "0.1.0"
description = ""
authors = ["LeonardoNatale <natale.leonardo1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lea-cli = "^0.3.1"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
black = "^23.11.0"
ipykernel = "^6.27.0"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
